updated docs for gamesCount handler
