# docs/swagger.json
@@ -71,7 +71,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.Response"
+                            "$ref": "#/definitions/api.GamesCount"
                         }
                     },
                     "500": {
@@ -180,6 +180,14 @@
             "properties": {
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "api.GamesCount": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
                 }
             }
         },
